[package]
name = "thruster-socketio"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
chashmap = "2.2"
crossbeam = "0.7"
env_logger = { version = "0.3.4", default-features = false }
futures-util = "0.3"
futures = "0.3"
hyper = "0.13"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.7"
redis = { git = "https://github.com/mitsuhiko/redis-rs.git" }
rust-crypto = "0.2"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
#thruster = { version = "0.9.0-alpha.8", features = ["hyper_server", "file"] }
thruster = { path = "../../thruster/thruster", features = ["hyper_server", "file"] }
thruster-socketio-proc = { path = "../socketio_proc" }
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.10"


[dev-dependencies]
dotenv = "0.13.0"
