[package]
name = "thruster-socketio"
version = "0.1.11"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A SocketIO layer built on Thruster"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "socketio", "websocket"]
documentation = "https://docs.rs/thruster-socketio"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/thruster-rs/thruster-socketio"
edition = "2018"

[dependencies]
base64 = "0.11"
chashmap = "2.2"
env_logger = { version = "0.3.4", default-features = false }
futures-util = "0.3"
futures = "0.3"
hyper = "0.14.8"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.7"
trezm-redis = "0.15.2-alpha.0"
rust-crypto = "0.2"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
thruster = { version = "1.1.12", features = ["hyper_server", "file"] }
thruster-socketio-proc = "0.1.9"
tokio = { version = "1.5", features = ["full"] }
tokio-stream = { version = "0.1.6", features= ["net"] }
tokio-tungstenite = "0.14"

[dev-dependencies]
dotenv = "0.13.0"
